<resources>
    <string name="app_name">DogApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_admin_citas">Administrador de citas</string>
    <string name="title_admin_citas_2">de citas</string>
    <string name="dogapp_logo_desc">Logo principal de la aplicación</string>
    <string name="button_add">Boton para agendar nueva cita canina</string>
    <string name="back">Icono para retroceder a pantalla anterior</string>
    <string name="nueva_cita">Nueva Cita</string>
    <string name="nombre_del_propietario">Nombre del propietario</string>
    <string name="nombre_de_la_mascota">Nombre de la Mascota</string>
    <string name="raza">Raza</string>
    <string name="telefono">Teléfono</string>
    <string name="sintomas">Sintomas</string>
    <string name="guardar_cita">Guardar Cita</string>
    <string name="descripci_n_del_s_ntoma">Descripción del síntoma</string>


    <string-array name="arraySintomas">
        <item>Síntomas</item>
        <item>Sólo duerme</item>
        <item>No come</item>
        <item>Fractura extremidad</item>
        <item>Tiene pulgas</item>
        <item>Tiene garrapatas</item>
        <item>Bota demasiado pelo</item>
    </string-array>
</resources>